--- a/2nd.html
+++ b/2nd.html
@@ -6,7 +6,7 @@
 
 <body>
 
-<img src="image/333.jpg" imge="300" width="400">
+<img src="222.jpg" imge="300" width="400">
 <h5>一道不到新台幣40元的點心，為什麼能摘下米其林一星？<br>
 
 走進港式點心店「添好運」的香港深水埗分店，裝潢簡易、座位幾乎沒有空隙；<br>
