--- a/3nd.html
+++ b/3nd.html
@@ -6,7 +6,7 @@
 
 <body>
 
-<img src="333.jpg" imge="300" width="400">
+<img src="333.jpg" height="300" width="400">
 <h5>來自日本的「藏壽司」是台灣超受歡迎的迴轉壽司連鎖店，<br>
 
 然2018年6月「SUSHIRO壽司郎」頂著”日本最受喜愛”迴轉壽司店光環進駐台北車站美食商圈後，立刻掀起一場迴轉壽司爭霸戰。<br>
