--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
 落址於倫敦柯芬園，採取地上一層、地下一層的兩層店面結構，並擁有透明櫥窗式廚房，可容納 250 名顧客。<br>
 開幕當天，英國前外相強森（Boris Johnson）也到現場支持，並親自體驗動手包鼎泰豐著名的 18 摺小籠包。</h5><p>
 
-<a href="2nd.html">我要連結到第二頁</a>
-<a href="3nd.html">我要連結到第三頁</a>
-<a href="4nd.html">我要連結到第四頁</a>
-<a href="5nd.html">我要連結到第五頁</a>
+<a href="2nd.html">下一頁</a>
+  
+<a href="3nd.html">第三頁</a>
+  
+<a href="4nd.html">第四頁</a>
+  
+<a href="5nd.html">第五頁</a>
 
 
 </body>
