--- a/5nd.html
+++ b/5nd.html
@@ -16,7 +16,13 @@
 可是成果出來的時候，很有成就感</h5><p>
 
 
-
+<a href="1nd.html">第一頁</a>
+  
+  <a href="2nd.html">第二頁</a>
+  
+  <a href="3nd.html">第三頁</a>
+  
+<a href="4nd.html">第四頁</a>
 
 
 </body>
