--- a/4nd.html
+++ b/4nd.html
@@ -15,7 +15,7 @@
 一頓飯吃下來，至少有5位以上服務生對我們噓寒問暖，現在台灣的一號店來囉!!<br>
 9月14日開始試營運，地點在ATT 4 FUN的6樓。</h5><p>
 
- <a href="1nd.html">第一頁</a>
+ <a href="index.html">第一頁</a>
   
   <a href="2nd.html">第二頁</a>
   
