--- a/2nd.html
+++ b/2nd.html
@@ -15,7 +15,7 @@
 論客單價（人均消費金額），同為米其林一星的鼎泰豐超過5百元，添好運則不到一半；但論營收，<br>
 只有46個座位的添好運中環店，單店年營收超過新台幣1億元，坪效遠超座位數破百的鼎泰豐。</h5><p>
 
- <a href="index.html">第頁</a>
+ <a href="index.html">第一頁</a>
 
 <a href="3nd.html">下一頁</a>
   
