--- a/3nd.html
+++ b/3nd.html
@@ -4,6 +4,8 @@
 </head>
 
 
+<body background="222/666.jpg">   
+   
 <body>
 
 <img src="333.jpg" height="300" width="400">
@@ -15,7 +17,7 @@
 「藏壽司」有六十種以上的握壽司、軍艦壽司等餐點，九成以上都是均一價每盤40元、高價商品就是80元(兩盤)，<br>
 不分顏色、以盤數計價，看到喜歡就拿，點餐免用腦。</h5><p>
 
-<a href="1nd.html">第一頁</a>
+<a href="index.html">第一頁</a>
 
 <a href="2nd.html">第二頁</a>
   
