--- a/5nd.html
+++ b/5nd.html
@@ -3,7 +3,8 @@
 <title>第五頁</title>
 </head>
 
-
+<body background="222/666.jpg">
+  
 <body>
 
 
@@ -16,7 +17,7 @@
 可是成果出來的時候，很有成就感</h5><p>
 
 
-<a href="1nd.html">第一頁</a>
+<a href="index.html">第一頁</a>
   
   <a href="2nd.html">第二頁</a>
   
