--- a/5nd.html
+++ b/5nd.html
@@ -10,13 +10,16 @@
   
 
 <img src="222/888.gif">
-<h5>我覺得做這個要很專心<br>
+<h5>心得<br>
+  
+  我覺得做這個要很專心<br>
 
 一個不小心，打錯一個字就錯了<br>
 所以要很謹慎每一個步驟<br>
 
 雖然做這個很累<br>
-可是成果出來的時候，很有成就感</h5><p>
+可是成果出來的時候，很有成就感<br>
+  也學到很多平常沒有學到的東西</h5><p>
 
 
 <a href="index.html">第一頁</a>
