--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body background="222/999.gif">
 <body>
 
-<img src="222/111.jpg">
+<img src="222/111.jpg" height="300" width="400">
 <h5>鼎泰豐<br>
  
  台灣知名餐飲業者鼎泰豐 12 月初在倫敦展店，鮮美多汁的小籠包立即擄獲口味刁鑽的倫敦人，據彭博資訊報導，<br>
